@@ -7,6 +7,9 @@
 
 2007-01-31	Konstantin V. Arkhipov
 
+	* core/OSQL/DataType.class.php, meta/types/:
+	Unsigned{Small,,Big}Integer implemented.
+
 	* meta/types/: min/max values for SmallInteger/Integer primitives.
 
 2007-01-29	Dmitry E. Demidov
